klipper: make HistoryItem able to store almost any kind of clipboard data

No longer an abstract class either since HistoryItem does everything.

UUIDs are computed based on the mime data map, not just the displayable data.

Clipboard items are saved in Klipper's history file as whole mime data maps,
greatly simplifying the fetching of each clipboard item.

We don't show colors in history because copying a color via QMimeData::setColorData
doesn't seem to give anything pasteable most of the time.

BUG: 491961
FIXED-IN: 6.3